@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Switch to openssl-1.0.1g in static builds (cf. Heartbleed exploit)
 * Better logging about nonexistent tags
 * Dcm4Chee manufacturer
 * Automatic discovering of the path to the DICOM dictionaries
